Ma structure interface